# onsocial-protocol

./: .dockerignore  .env.example  .gitignore  .syncpackrc.json  .vercelignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  Makefile.md  README.md  config.toml  docker-compose.yml  fly.backend.toml  fly.relayer.toml  lint-staged.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
contracts/core-onsocial/: Cargo.toml  README.md  STORAGE_SIMPLIFICATION_PLAN.md
contracts/core-onsocial/src/: config.rs  constants.rs  errors.rs  lib.rs  status.rs  validation.rs
contracts/ft-wrapper-onsocial/: Cargo.toml  README.md
contracts/ft-wrapper-onsocial/src/: admin.rs  errors.rs  events.rs  ft.rs  lib.rs  state.rs  state_versions.rs  tests.rs  types.rs
contracts/intents-onsocial/: Cargo.toml  README.md
contracts/intents-onsocial/src/: lib.rs  oracle.rs  tests.rs
contracts/marketplace-onsocial/: Cargo.toml  README.md
contracts/marketplace-onsocial/src/: admin.rs  app_pool.rs  collection_purchase.rs  collection_views.rs  collections.rs  constants.rs  dispatch.rs  errors.rs  events.rs  execute.rs  external.rs  external_scarce_views.rs  guards.rs  internal.rs  lazy_listing.rs  lib.rs  nft_approval.rs  nft_callbacks.rs  nft_core.rs  nft_enumeration.rs  nft_metadata.rs  nft_views.rs  offer.rs  protocol.rs  royalties.rs  sale.rs  sale_auction.rs  sale_views.rs  scarce_approval.rs  scarce_approval_callbacks.rs  scarce_callbacks.rs  scarce_collection_purchase.rs  scarce_collection_refunds.rs  scarce_collection_views.rs  scarce_collections.rs  scarce_core.rs  scarce_enumeration.rs  scarce_lifecycle.rs  scarce_metadata.rs  scarce_native_views.rs  (+9 more)
contracts/relayer-onsocial/: Cargo.toml  README.md
contracts/relayer-onsocial/src/: admin.rs  balance.rs  constants.rs  errors.rs  events.rs  lib.rs  relay.rs  sponsor.rs  state.rs  state_versions.rs  tests.rs  types.rs
contracts/rewards-onsocial/: Cargo.toml
contracts/rewards-onsocial/src/: admin.rs  dispatch.rs  errors.rs  events.rs  execute.rs  ft_receiver.rs  lib.rs  protocol.rs  sdk_parity_test.rs  tests.rs  views.rs
contracts/scarces-onsocial/: Cargo.toml  README.md
contracts/scarces-onsocial/src/: admin.rs  constants.rs  errors.rs  execute.rs  ft_receiver.rs  guards.rs  lib.rs  royalties.rs  time.rs  upgrade.rs  validation.rs
contracts/staking-onsocial/: Cargo.toml  README.md
contracts/staking-onsocial/src/: errors.rs  events.rs  lib.rs  lib_temp.rs  state.rs  state_versions.rs  tests.rs
contracts/token-onsocial/: Cargo.toml  README.md
contracts/token-onsocial/src/: lib.rs  tests.rs
contracts/vesting-onsocial/: Cargo.toml  README.md
contracts/vesting-onsocial/src/: lib.rs  tests.rs
crates/onsocial-auth/: Cargo.toml
crates/onsocial-auth/src/: auth_types.rs  authenticate.rs  lib.rs  nonce.rs  verify.rs
indexers/substreams/: .substreams-core.yaml  .substreams.env  Cargo-backup.toml  Cargo.toml  README.md  boost_schema.sql  build.rs  combined_schema.sql  core_schema.sql  core_schema_views.sql  leaderboard_schema_views.sql  notifications_schema.sql  onsocial-events-v0.6.0.spkg  pack.sh  rewards_schema.sql  run_sinks.sh  scarces_schema.sql  schema.sql  social_spend_schema.sql  staking_schema.sql  substreams.yaml  token_schema.sql
indexers/substreams/migrations/: 20260511_drop_obsolete_substreams_objects.sql
indexers/substreams/proto/: boost.proto  combined.proto  core.proto  onsocial.proto  rewards.proto  scarces.proto  social_spend.proto  staking.proto  token.proto
indexers/substreams/scripts/: capture_event_fixtures.sh  check_db_schema_parity.py  check_event_manifest.py  sync-hasura-substreams-metadata.sh  validate_sql.sh
indexers/substreams/src/: block_walker.rs  boost_db_out.rs  boost_decoder.rs  combined_db_out.rs  core_db_out.rs  core_decoder.rs  db_out.rs  decoder.rs  graph_out.rs  lib.rs  rewards_db_out.rs  rewards_decoder.rs  scarces_db_out.rs  scarces_decoder.rs  social_spend_db_out.rs  social_spend_decoder.rs  staking_db_out.rs  staking_decoder.rs  token_db_out.rs  token_decoder.rs
indexers/substreams/tests/: .gitignore  README.md  common.sh  coverage_report.sh  event_manifest.json  golden_db_fixtures.json  run_all.sh  test_contract.sh  test_data.sh  test_group.sh  test_health.sh  test_permission.sh  test_storage.sh
tests/: Cargo.toml  integration_tests.rs
tests/src/: account_storage_tests.rs  actions_group_tests.rs  auth_onsocial_tests.rs  boost_onsocial_tests.rs  contract_status_tests.rs  core_onsocial_tests.rs  cross_contract_tests.rs  ft_wrapper_onsocial_tests.rs  governance_request_parsing_tests.rs  group_content_tests.rs  group_core_view_tests.rs  group_pool_deposit_tests.rs  group_sponsor_validation_tests.rs  group_sponsorship_storage_tests.rs  intents_onsocial_tests.rs  join_request_execution_fixes_tests.rs  key_permissions_tests.rs  lib.rs  lib_wrapper_regression_tests.rs  member_add_remove_tests.rs  member_invite_execution_tests.rs  mod.rs  ownership_tests.rs  path_validation_tests.rs  permissions_tests.rs  privacy_tests.rs  proposal_validation_tests.rs  proposals_tests.rs  relayer_delegate_e2e_tests.rs  relayer_key_pool_tests.rs  relayer_onsocial_tests.rs  shared_storage_atomic_tests.rs  signed_payload_integration_tests.rs  social_spend_onsocial_tests.rs  staking_gas_profiling_tests.rs  staking_onsocial_tests.rs  storage_batch_tests.rs  token_onsocial_tests.rs  utils.rs
tests/src/rewards/: helpers.rs  mod.rs  test_claim.rs  test_claim_callback.rs  test_credit_reward.rs  test_daily_cap.rs  test_deploy_and_admin.rs  test_pool_deposit.rs  test_views.rs
tests/src/scarces/: helpers.rs  mod.rs  test_allowlists.rs  test_app_pool_views.rs  test_app_pools.rs  test_app_relations.rs  test_approvals.rs  test_auctions.rs  test_auth.rs  test_collection_views.rs  test_collections.rs  test_deploy_and_admin.rs  test_edge_cases.rs  test_enumeration.rs  test_external_nft.rs  test_ft_receiver.rs  test_hardening.rs  test_lazy_listing_views.rs  test_lazy_listings.rs  test_lifecycle.rs  test_moderation.rs  test_native_sales.rs  test_offers.rs  (+11 more)
(+851 files in other folders)
