# OnSocial Protocol - Workspace Cargo.toml
#
# This file centralizes all dependency versions for the monorepo. Each contract
# (marketplace-onsocial, staking-onsocial, core-onsocial) and the tests crate
# reference only the dependencies they need using `workspace = true` in their
# Cargo.toml.
#
# Dependency Usage:
# - marketplace-onsocial: near-sdk, near-sdk-macros, borsh, serde
# - staking-onsocial: near-sdk, near-sdk-macros, borsh, serde
# - core-onsocial: near-sdk, near-sdk-macros, borsh, serde
# - relayer: near-sdk, near-sdk-macros, borsh, serde, near-crypto, semver
# - tests: near-sdk, near-workspaces, near-crypto, tokio, anyhow, serde_json
#
# When adding a new contract or updating tests, reference the required dependencies
# in their Cargo.toml and update the documentation here to reflect usage.

[workspace]
members = [
    "contracts/marketplace-onsocial",
    "contracts/staking-onsocial",
    "contracts/core-onsocial",
    "tests",
    "packages/relayer"
]
resolver = "2"

[workspace.dependencies]
near-sdk = "5.20.0"
near-sdk-macros = "5.20.0"
borsh = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-crypto = "0.30.3"
near-primitives = "0.30.3"
ed25519-dalek = "2.2.0"
getrandom = { version = "0.2.16", features = ["js"] }
hex = "0.4.3"
base64 = "0.22.1"
bs58 = "0.5.1"
rand = "0.8"
near-workspaces = "0.20.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
semver = "1.0.27"
schemars = "0.8.22"
near-gas = "0.3.3"
itertools = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
prost = "0.14.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true
