# OnSocial Protocol - Workspace Cargo.toml
#
# CONTRACTS: Use explicit dependency versions in their own Cargo.toml files.
# This ensures deployed contracts remain reproducible and can be upgraded
# independently without accidental dependency drift.
#
# SHARED TOOLING: The workspace.dependencies below are for shared tooling only:
# - tests: near-workspaces, tokio, anyhow, etc.
# - relayer: near-crypto, semver, etc.
#
# When upgrading a contract's dependencies, update that contract's Cargo.toml
# directly after testing thoroughly.

[workspace]
members = [
    "contracts/marketplace-onsocial",
    "contracts/staking-onsocial",
    "contracts/core-onsocial",
    "contracts/manager-proxy-onsocial",
    "tests",
    "packages/relayer"
]
exclude = [
    "indexers/substreams"  # Standalone WASM module with its own deps
]
resolver = "2"

[workspace.dependencies]
near-sdk = "5.24.0"
near-sdk-macros = "5.24.0"
borsh = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-crypto = "0.30.3"
near-primitives = "0.30.3"
ed25519-dalek = "2.2.0"
getrandom = { version = "0.2.16", features = ["js"] }
hex = "0.4.3"
base64 = "0.22.1"
bs58 = "0.5.1"
rand = "0.8"
sha2 = "0.10.9"
near-workspaces = "0.22.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
semver = "1.0.27"
schemars = "0.8.22"
near-gas = "0.3.3"
itertools = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
prost = "0.14.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true
