[package]
name = "onsocial-integration-tests"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies]
near-sdk = { workspace = true }
near-workspaces = { workspace = true }
near-crypto = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ft-wrapper-onsocial = { path = "../contracts/ft-wrapper-onsocial" }
relayer-onsocial = { path = "../contracts/relayer-onsocial" }