[package]
name = "onsocial-integration-tests"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies]
near-sdk = { workspace = true }
near-workspaces = { workspace = true }
near-crypto = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true, features = ["derive"] }