[package]
name = "core-onsocial"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.0"
near-sdk-macros = "5.24.0"
borsh = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
near-gas = "0.3.3"
onsocial-types = { path = "../../crates/onsocial-types" }
onsocial-auth = { path = "../../crates/onsocial-auth" }

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }
ed25519-dalek = "2.2.0"
bs58 = "0.5.1"

