[package]
name = "core-onsocial"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.26.1", features = ["unstable", "global-contracts"] }
near-sdk-macros = "5.26.1"
borsh = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
near-gas = "0.3.3"

[dev-dependencies]
near-sdk = { version = "5.26.1", features = ["unit-testing", "unstable", "global-contracts"] }
ed25519-dalek = "2.2.0"
bs58 = "0.5.1"

