[package]
name = "ft-wrapper-onsocial"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }
near-sdk-macros = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
semver = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }