[package]
name = "marketplace-onsocial"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.0"
onsocial-types = { path = "../../crates/onsocial-types" }
onsocial-auth = { path = "../../crates/onsocial-auth" }

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }