[package]
name = "relayer-onsocial"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OnSocial-Labs/onsocial-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }
near-sdk-macros = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
near-crypto = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-crypto = { workspace = true }