[package]
name = "relayer-onsocial"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
near-sdk-macros = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
near-crypto = { workspace = true }

getrandom = { workspace = true, features = ["js"] }
semver = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-crypto = { workspace = true }
bs58 = { workspace = true }