[package]
name = "relayer-onsocial"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
name = "relayer_onsocial"
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
near-sdk-macros = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
getrandom = { workspace = true, features = ["js"] }
semver = { workspace = true }
ed25519-dalek = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-crypto = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
