[package]
name = "scarces-onsocial"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.0"
near-sdk-macros = "5.24.0"
serde = { version = "1.0", features = ["derive"] }
primitive-types = "0.14"
getrandom = { version = "0.2", features = ["custom"] }
onsocial-types = { path = "../../crates/onsocial-types" }
onsocial-auth = { path = "../../crates/onsocial-auth" }

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }