[package]
name = "scarces-onsocial"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.26.1", features = ["global-contracts"] }
near-sdk-macros = "5.26.1"
serde = { version = "1.0", features = ["derive"] }
primitive-types = "0.14"
getrandom = { version = "0.2", features = ["custom"] }

[features]
sandbox = []

[dev-dependencies]
near-sdk = { version = "5.26.1", features = ["unit-testing", "global-contracts"] }