[package]
name = "staking-onsocial"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.0"
near-sdk-macros = "5.24.0"
borsh = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0.27"

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }