[package]
name = "token-onsocial"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.0"
near-contract-standards = "5.24.0"

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }
