[package]
name = "vesting-onsocial"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OnSocial-Labs/onsocial-protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.0"
near-sdk-macros = "5.24.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }