[package]
name = "onsocial-auth"
version = "0.1.0"
edition = "2024"
description = "On-chain auth verification for OnSocial contracts"

[dependencies]
near-sdk = "5.24.0"
near-sdk-macros = "5.24.0"
serde = { version = "1.0", features = ["derive"] }
onsocial-types = { path = "../onsocial-types" }
serde_json = { version = "1.0", features = ["preserve_order"] }
