[package]
name = "onsocial-substreams"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Substreams module for indexing OnSocial NEAR contract events (NEP-297 JSON format)"

[lib]
crate-type = ["cdylib"]
name = "onsocial_substreams"

[dependencies]
# Substreams
substreams = "0.6"
substreams-near = "0.10"
prost = "0.13"

# JSON parsing (no more Borsh!)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
