[package]
name = "onsocial-substreams"
version = "0.7.0"
edition = "2024"
rust-version = "1.93"
description = "Substreams indexer for OnSocial protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.7.3"
substreams-near = "0.10.2"
substreams-database-change = "3.0.0"
prost = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
